--- a/app/#source/scss/style.scss
+++ b/app/#source/scss/style.scss
@@ -606,8 +606,8 @@
 	flex-wrap: wrap;
 	justify-content: space-evenly;
 	margin-top: 65px;
-	width: 1290px;
-	height: 745px;
+	max-width: 1290px;
+	// height: 745px;
 	border: 1px solid #eaeaea;
 	background-color: #fff;
 }
@@ -719,27 +719,79 @@
 }
 /*---------- section customers ----------*/
 .customer {
+	// border: 
 	position: relative;
-	margin-top: 120px;
-	height: 499px;
+	max-height: 499px;
+	height: 35vw;
+	border-top: 1px solid rgba(255, 255, 255, 0);
 }
 .customer-background {
 	position: absolute;
-	top: 100px;
+	bottom: 0;
 	left: 50%;
 	z-index: -3;
+	display: block;
+	padding: 0 20px;
+	min-height: 100px;
+	max-width: 1330px;
+	max-height: 350px;
 	width: 100%;
+	height: 25vw;
 	transform: translate(-50%);
 }
 /*---------------*/
 .customer-main {
+	position: absolute;
+	bottom: 0;
+	left: 50%;
 	display: flex;
 	justify-content: space-between;
-	margin-top: 120px;
+	width: 100%;
+	transform: translateX(-50%);
 }
 .customer-item {
 	display: flex;
-	width: 50%;
+	width: calc(50% - 20px);
+}
+.customer-text {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	margin-top: auto;
+	margin-left: 10px;
+	max-width: 290px;
+	max-height: 300px;
+	width: 55%;
+
+	@include mdf3_1199 {
+		margin-left: 0;
+	}
+}
+.img-block {
+	display: flex;
+	flex-direction: column;
+	width: 40%;
+}
+.customer__img {
+	display: block;
+	flex: 0 1 auto;
+	margin-top: auto;
+	width: 100%;
+	height: auto;
+}
+.customer-description {
+	margin-bottom: 50px;
+	max-width: 286px;
+
+	color: #fff;
+	line-height: 30.16px;
+	font-style: italic;
+	font-size: 18px;
+	font-family: 'Playfair Display', serif;
+
+	@include mdf3_1199 {
+		margin-bottom: 10px;
+	}
 }
 .left {
 	justify-content: flex-start;
@@ -752,24 +804,6 @@
 }
 .right .customer-description {
 	text-align: right;
-}
-
-.customer-text {
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-end;
-	margin-left: 10px;
-	width: 290px;
-}
-.customer-description {
-	margin-bottom: 50px;
-	width: 286px;
-
-	color: #fff;
-	line-height: 30.16px;
-	font-style: italic;
-	font-size: 18px;
-	font-family: 'Playfair Display', serif;
 }
 .customer-name {
 	margin-bottom: 25px;
