--- a/app/#source/scss/style.scss
+++ b/app/#source/scss/style.scss
@@ -11,6 +11,22 @@
 	padding: 0 20px;
 	max-width: 1330px;
 }
+.ibg {
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	position: relative;
+}
+.img_bg {
+	width: 0;
+	height: 0;
+	position: absolute;
+	top: 0;
+	left: 0;
+	opacity: 0;
+	visibility: hidden;
+}
+
 /*---------- base ----------*/
 
 /*---------- header ----------*/
@@ -156,7 +172,7 @@
 	justify-content: center;
 	max-height: 690px;
 	height: 48vw;
-	background-image: url('../img/slider_01.png');
+	// background-image: url('../img/slider_01.png');
 	background-position: center;
 	background-size: contain;
 	background-repeat: no-repeat;
@@ -836,6 +852,7 @@
 	padding-bottom: 40px;
 }
 .footer-block-navigation {
+	margin-left: 50px;
 	display: flex;
 	justify-content: flex-start;
 	width: 65%;
