--- a/app/css/style.css
+++ b/app/css/style.css
@@ -18,6 +18,23 @@
   max-width: 1330px;
 }
 
+.ibg {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+.img_bg {
+  width: 0;
+  height: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+}
+
 /*---------- base ----------*/
 
 /*---------- header ----------*/
@@ -217,7 +234,6 @@
   justify-content: center;
   max-height: 690px;
   height: 48vw;
-  background-image: url("../img/slider_01.png");
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
@@ -1089,6 +1105,7 @@
 }
 
 .footer-block-navigation {
+  margin-left: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
